dfir_rs/tests/compile-fail-stable/surface_lattice_fold_wronggeneric.rs
../compile-fail/surface_lattice_fold_wronggeneric.rs